adjusted com + fixed wheel not showing

--- a/wp-content/plugins/spinwheel/assets/style.css
+++ b/wp-content/plugins/spinwheel/assets/style.css
@@ -33,8 +33,10 @@
 
 #case-track {
     display: flex;
-    width: max-content;  /* <-- REQUIRED */
+    width: max-content;
+    transition: transform 3s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
+
 
 .case-item {
     min-width: 120px;
